# lib/api-spec/openapi.yaml
@@ -791,7 +791,9 @@ components:
           type: ["string", "null"]
         group_name:
           type: string
-      required: [id, name, image_url, group_name]
+        group_id:
+          type: string
+      required: [id, name, image_url, group_name, group_id]
 
     HeyGenAvatar:
       type: object
